--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,68 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+h1 {
+	color: rgb(2,132,130);
+	margin: 0 auto;
+}
+h2 {
+	color: #ffd700;
+}
+.board {
+	height: 80%;
+	width: 50%;
+	display: inline-block;
+	/*float: left;  //Incorrect instructions from unit 5
+	margin: 8%;*/
+}
+.card {
+	height: 200px;
+	width: 150px;
+	background: rgb(255,255,0);
+	border-radius: 10px;
+	border: 1px solid #000;
+	display: inline-block;
+	float: left;
+	margin: 8%;
+}
+span {
+	color: #ff0000;
+}
+header, footer, p {
+	text-align: center;
+}
+nav {
+	background: #808080;
+}
+nav a {
+	text-decoration: none;
+	background: #ffbf00;
+	color: white;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+a:hover {
+	background: #ee5f3c;
+}
+.clearfix:after {
+	content: " ";
+	display: block;
+	clear: both;
+}
+
+footer {
+	background: #808080;
+}
+
+#LI {
+	color: black;
+	text-decoration: none;
+	border: 0;
+	padding: 5px;
+	border-radius: 10%;
+	font-family: Arial;
+	font-size: 14px;
+}
+
+#LI span {
+	background: #0076b7;
+	color: white;
+}
