--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -22,6 +22,12 @@ h2 {
 	float: left;
 	margin: 8%;
 }
+.card img {
+	height: 200px;
+	width: 150px;
+	border-radius: 10px;
+	/*border: 1px solid #000;*/
+}
 span {
 	color: #ff0000;
 }
